# pathspotter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/report_csv/gzip/: gzip._PaddedFile.read.csv  index.csv
docs/report_html/gzip/: gzip.GzipFile.__init__.html  gzip.GzipFile._init_write.html  gzip._PaddedFile.read.html  gzip.open.html  gzip.write32u.html  index.html
examples/report_html/gzip/: gzip.GzipFile.__init__.html  gzip.GzipFile._init_write.html  gzip.open.html  gzip.write32u.html
exp/: examples_cmd_line_csv.sh  examples_cmd_line_html.sh  python_standard_lib.sh
exp/report_csv/argparse/: argparse.Action.format_usage.csv  argparse.ArgumentDefaultsHelpFormatter._get_help_string.csv  argparse.ArgumentParser.__init__.<locals>.identity.csv  argparse.ArgumentParser._add_action.csv  argparse.ArgumentParser._get_formatter.csv  argparse.ArgumentParser._match_argument.csv  argparse.ArgumentParser._parse_known_args.csv  argparse.ArgumentParser._print_message.csv  argparse.ArgumentParser.add_subparsers.csv  argparse.ArgumentParser.convert_arg_line_to_args.csv  argparse.ArgumentParser.format_help.csv  argparse.ArgumentParser.format_usage.csv  argparse.ArgumentParser.parse_intermixed_args.csv  argparse.ArgumentParser.parse_known_args.csv  argparse.BooleanOptionalAction.__call__.csv  argparse.BooleanOptionalAction.format_usage.csv  (+33 more)
exp/report_csv_ok/: all_index.csv
pathspotter/: report.py  report_csv.py  report_html.py  runner.py  sample.py  utils.py
pathspotter/htmlfiles/: index.html  pyfile2.html
tests/: test_report.py
(+9324 files in other folders)
