[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathspotter"
version = "0.1"
description = "Pathspotter"
authors = [
  { name="Andre Hora", email="andrehoraa@gmail.com" },
]
license = "MIT"
readme = "README.md"
keywords = ["dynamic-analysis", "testing"]
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing"
]

[project.urls]
"Homepage" = "https://github.com/andrehora/pathspotter"
"Bug Tracker" = "https://github.com/andrehora/pathspotter/issues"